--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/parkinsans": "^5.2.6",
     "framer-motion": "^11.0.0",
     "next": "15.4.6",
     "react": "19.1.0",
